--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,8 @@
     <string name="about_o3">About O3</string>
     <string name="graph_view">Graph View</string>
     <string name="enter_png_filename">Enter a .png filename : </string>
+    <string name="enter_call_script">Enter call (funcall, run_script or math_call) script : </string>
+    <string name="enter_button_title">Enter button title : </string>
     <string name="error_saving_png">Error saving png file : </string>
     <string name="saved_png">Saved png : </string>
     <string name="function_call_err">Error calling function : </string>
