--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,6 +36,7 @@
     <string name="enter_png_filename">Enter a .png filename : </string>
     <string name="enter_call_script">Enter call (funcall, run_script or math_call) script : </string>
     <string name="enter_button_title">Enter button title : </string>
+    <string name="undefined_button">...</string>
     <string name="error_saving_png">Error saving png file : </string>
     <string name="saved_png">Saved png : </string>
     <string name="function_call_err">Error calling function : </string>
