--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -49,4 +49,5 @@
     <string name="undefined_function">Function is not defined : </string>
     <string name="java_math_inspection_error">Error retrieving java math functions : </string>
     <string name="init_script_error">Error executing init script : </string>
+    <string name="resume">RESUME</string>
 </resources>
