--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,5 @@
     <string name="java_math_inspection_error">Error retrieving java math functions : </string>
     <string name="init_script_error">Error executing init script : </string>
     <string name="resume">RESUME</string>
+    <string name="script_running">A script is running, please retry later.</string>
 </resources>
