--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,8 +53,8 @@
     <string name="init_script_error">Error executing init script : </string>
     <string name="resume">RESUME</string>
     <string name="script_running">A script is running, please retry later.</string>
-    <string name="exiting_script">exiting script..</string>
-    <string name="entering_script">entering script..</string>
     <string name="preparing_script">preparing script..</string>
+    <string name="running_script">running script..</string>
+    <string name="exiting_script">exiting script..</string>
     <string name="empty_string" />
 </resources>
