--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -56,7 +56,9 @@
     <string name="resume">RESUME</string>
     <string name="script_running">A script is running, please retry later.</string>
     <string name="preparing_script">preparing script..</string>
-    <string name="running_script">running script..</string>
+    <string name="compiling_script">compiling script..</string>
+    <string name="executing_script">executing script..</string>
+    <string name="interpreting_script">interpreting script..</string>
     <string name="exiting_script">exiting script..</string>
     <string name="empty_string" />
     <string name="input_infixed">Input infixed</string>
