--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="script_functions">Script Functions</string>
     <string name="scripts">Scripts</string>
     <string name="show_samples">Show Samples..</string>
+    <string name="generate_samples">Generate Samples</string>
     <string name="init_script">Select Init Script..</string>
     <string name="cancel_init_script">Cancel Init Script</string>
     <string name="edit_script">Edit..</string>
@@ -67,4 +68,5 @@
     <string name="max_x">maximum x value:</string>
     <string name="min_y">mininum y value:</string>
     <string name="max_y">maximum y value:</string>
+    <string name="scripts_generated">Scripts generated. WARNING : they require functions defined in the init script...</string>
 </resources>
