Up to 35 function buttons can now be assigned a function
. Typo in help fixed
. 35 function buttons
. bumped version up to 2.06

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -68,7 +68,7 @@
     <string name="max_x">maximum x value :</string>
     <string name="min_y">mininum y value :</string>
     <string name="max_y">maximum y value :</string>
-    <string name="read_help_first">This graphic programming RPN calculator is highly configurable, read help first to better understand how to use it. \nThanks</string>
+    <string name="read_help_first">This programmable graphic RPN calculator is highly configurable, read help first to better understand how to use it.\nThanks</string>
     <string name="button_help">Assign a function : \n\nlong press, then, when prompted, enter the math (eg \"math_call sqrt\") \nor user defined function (eg \"funcall average\"), then the button title.</string>
     <string name="scripts_generated">Scripts generated. WARNING : they require functions defined in the init script...</string>
 </resources>
