--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -69,6 +69,6 @@
     <string name="min_y">mininum y value :</string>
     <string name="max_y">maximum y value :</string>
     <string name="read_help_first">This programmable graphic RPN calculator is highly configurable, read help first to better understand how to use it.\nThanks</string>
-    <string name="button_help">Assign a function : \n\nlong press, then, when prompted, enter the math (eg \"math_call sqrt\") \nor user defined function (eg \"funcall average\"), then the button title.</string>
+    <string name="button_help">Assign a function : \n\nlong press, then, when prompted, enter the math (eg \"math_call sqrt\") \n,user function (eg \"funcall ...\") or script (eg \"script_call ...\"), then the button title.</string>
     <string name="scripts_generated">Scripts generated. WARNING : they require functions defined in the init script...</string>
 </resources>
