--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,11 +24,12 @@
     <string name="stop_script">Stop</string>
     <string name="debug_script">Debug..</string>
     <string name="new_script">New..</string>
-    <string name="new_script_name">NewScript</string>
+    <string name="new_script_name">NewScript.o3s</string>
     <string name="graph">Graph View</string>
     <string name="draw_function">Draw Function..</string>
     <string name="show_graph">Show..</string>
     <string name="save_graph">Save..</string>
+    <string name="load_graph">Load..</string>
     <string name="select">Select</string>
     <string name="cancel">Cancel</string>
     <string name="apply">Apply</string>
@@ -43,7 +44,9 @@
     <string name="enter_button_title">Enter button title : </string>
     <string name="undefined_button">...</string>
     <string name="error_saving_png">Error saving png file : </string>
+    <string name="error_loading_png">Error loading png file : </string>
     <string name="saved_png">Saved png : </string>
+    <string name="loaded_png">Loaded png : </string>
     <string name="function_call_err">Error calling function : </string>
     <string name="param_cast_err">Error casting parameters : </string>
     <string name="invalid_number">Not a valid number : </string>
